# ghostmirror

./: .gitignore  README.md  country_names.list  meson.build  meson.developer  meson.options  meson_options.txt
bash-completion/: ghostmirror
distro/: PKGBUILD  aur.wiki
include/gm/: arch.h  archive.h  gm.h  inutility.h  investigation.h  mirrorlist.h  systemd.h  www.h
include/notstd/: atomic.h  compiler.h  error.h  fzs.h  memory.h  opt.h  rbtree.h  utf8.h
man/: gen-manpages.sh  ghostmirror.1  ghostmirror.1.skel
notstd/: core.c  delay.c  extras.c  math.c  memory.c  opt.c  str.c  utf8.c
src/: arch.c  archive.c  gm.c  inutility.c  investigation.c  mirrorlist.c  ping.c  systemd.c  www.c
subprojects/: happycrash.wrap
