option('eveloper', type: 'boolean', value: false, description: 'set developer mode')
option('ebug', type: 'integer', value: 0, description: 'set debug level, 0 disable 4 full')
option('shortpath', type: 'boolean', value: true, description: 'set debug path to short, enable 1, disable 0')
option('shortfn', type: 'boolean', value: true, description: 'set debug function allineated to 24, enable 1, disable 0')
option('olor', type: 'boolean', value: true, description: 'color debug, 0 disable 1 active')
option('assert', type: 'boolean', value: true, description: 'enable assertion')
option('optimize', type: 'string', value: 'none', description: 'optimization: none/debug/normal/heavy')
option('openmp', type: 'boolean', value: true, description: 'enable openmp')
option('gprof', type: 'boolean', value: false, description: 'enable gprof')
option('autovectorization', type: 'boolean', value: true, description: 'enable vectorization')

